--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,11 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  # For details on connection pooling, see Rails configuration guide
+  # https://guides.rubyonrails.org/configuring.html#database-pooling
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: weather_app_production
+  username: weather_app
+  password: <%= ENV['WEATHER_APP_DATABASE_PASSWORD'] %>
